--- a/package.json
+++ b/package.json
@@ -6,5 +6,16 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/eHanlin/info-106fblive.git"
+  },
+  "dependencies": {
+    "babel-core": "^6.26.0"
+  },
+  "devDependencies": {
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
+    "gulp-template-util": "0.0.2",
+    "gulp-uglify-es": "^1.0.1",
+    "q": "^1.5.1"
   }
 }
