--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "url": "https://github.com/eHanlin/info-106fblive.git"
   },
   "dependencies": {
-    "babel-core": "^6.26.0"
+    "babel-core": "^6.26.0",
+    "gulp-gcloud-publish": "^2.0.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
