--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "url": "https://github.com/eHanlin/info-106fblive.git"
   },
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "gulp-gcloud-publish": "^2.0.0"
+    "babel-core": "^6.26.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
+    "gulp-cache": "^1.0.2",
+    "gulp-gcloud-publish": "^2.0.0",
+    "gulp-imagemin": "^4.1.0",
     "gulp-template-util": "0.0.2",
     "gulp-uglify-es": "^1.0.1",
+    "imagemin-pngquant": "^5.1.0",
     "q": "^1.5.1"
   }
 }
